--- a/.env
+++ b/.env
@@ -37,5 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+# MAILER_DSN=null://null jlbb eavk ugsl gijj
+MAILER_DSN=smtp://nofonalaina@gmail.com:jlbbeavkugslgijj@smtp.gmail.com:587?encryption=tls
 ###< symfony/mailer ###
