--- a/.env
+++ b/.env
@@ -37,6 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null jlbb eavk ugsl gijj
-MAILER_DSN=smtp://nofonalaina@gmail.com:jlbbeavkugslgijj@smtp.gmail.com:587?encryption=tls
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
